# lmputils

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure  configure.ac
include/: lmp2atomstyle.h  lmp2atomstyle.h~  lmpio.h
lmp2atomstyle/: AUTHORS  Makefile.am  autogen.sh  configure.ac
lmp2atomstyle/src/: lmp2atomstyle.c  main.c
lmp2atomstyle/src/.deps/: lmp2atomstyle-lmp2atomstyle.Po  lmp2atomstyle-main.Po
scripts/: lmp2dump.sh  lmp2rdf.sh  lmpcharges.sh  lmpdata.sh  lmpdensity.sh  lmpmass.py  lmpsetmasses.sh  lmpsizes.py  xyz2lmp.sh
src/: .gitignore  lmp2atomstyle.c  lmp2atomstyle_main.c  lmp2rdf.sh  lmpcharges.sh  lmpio.cpp  lmpiotest.cpp  lmplog2volume.sh  lmpmass.py  lmpsizes.py  lmpvolume.py  main.cpp  xyz2lmp.sh
